[gd_scene load_steps=125 format=2]

[ext_resource path="res://content/gadgets/orchard/Orchard.gd" type="Script" id=1]
[ext_resource path="res://content/gadgets/orchard/dome1/orchard-Sheet.png" type="Texture" id=2]
[ext_resource path="res://content/gadgets/orchard/dome1/fruit-Sheet.png" type="Texture" id=3]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=4]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=5]
[ext_resource path="res://content/sounds/Locations/Orchard/stingelements_7.wav" type="AudioStream" id=6]
[ext_resource path="res://content/sounds/Locations/Orchard/Waterwhale.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/Locations/Orchard/stingelements_8.wav" type="AudioStream" id=8]
[ext_resource path="res://content/gadgets/orchard/dome2/orchard2-Sheet.png" type="Texture" id=9]
[ext_resource path="res://content/gadgets/orchard/dome2/fruit2-Sheet.png" type="Texture" id=10]
[ext_resource path="res://content/gadgets/orchard/dome3/orchard03.png" type="Texture" id=11]
[ext_resource path="res://content/sounds/UI/Error.wav" type="AudioStream" id=12]
[ext_resource path="res://content/sounds/Events/EggPlant/EggPlant.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/Locations/Orchard/OrchardShield.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/Locations/Orchard/OrchardOverCharge.wav" type="AudioStream" id=15]
[ext_resource path="res://content/sounds/Locations/Orchard/Dome2_appleSpawn.wav" type="AudioStream" id=16]
[ext_resource path="res://content/sounds/Locations/Orchard/Dome2_orchard_01.wav" type="AudioStream" id=17]
[ext_resource path="res://content/sounds/Locations/Orchard/Dome2_orchard_03.wav" type="AudioStream" id=18]
[ext_resource path="res://content/sounds/Locations/Orchard/Dome2_orchard_02.wav" type="AudioStream" id=19]
[ext_resource path="res://content/sounds/Locations/Orchard/Roots.wav" type="AudioStream" id=20]
[ext_resource path="res://content/sounds/Locations/Orchard/OrchardShield_die.wav" type="AudioStream" id=21]
[ext_resource path="res://content/sounds/Locations/Orchard/Dome Orchrard bling2.wav" type="AudioStream" id=22]

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 2 )
region = Rect2( 0, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 2 )
region = Rect2( 45, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 2 )
region = Rect2( 90, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 2 )
region = Rect2( 135, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 2 )
region = Rect2( 180, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 2 )
region = Rect2( 225, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 2 )
region = Rect2( 270, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 2 )
region = Rect2( 315, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 2 )
region = Rect2( 360, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 45, 45 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 2 )
region = Rect2( 0, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 2 )
region = Rect2( 45, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 2 )
region = Rect2( 90, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 2 )
region = Rect2( 135, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 2 )
region = Rect2( 180, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 2 )
region = Rect2( 225, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 2 )
region = Rect2( 270, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 2 )
region = Rect2( 315, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 2 )
region = Rect2( 360, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 2 )
region = Rect2( 0, 135, 45, 45 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 2 )
region = Rect2( 45, 135, 45, 45 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 2 )
region = Rect2( 90, 135, 45, 45 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 2 )
region = Rect2( 135, 135, 45, 45 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 2 )
region = Rect2( 180, 135, 45, 45 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 2 )
region = Rect2( 225, 135, 45, 45 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 2 )
region = Rect2( 270, 135, 45, 45 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 2 )
region = Rect2( 315, 135, 45, 45 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 34, 46 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 48, 55 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 2 )
region = Rect2( 0, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 2 )
region = Rect2( 45, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 2 )
region = Rect2( 90, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 2 )
region = Rect2( 135, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 2 )
region = Rect2( 180, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 2 )
region = Rect2( 225, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 2 )
region = Rect2( 270, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 2 )
region = Rect2( 315, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 2 )
region = Rect2( 360, 90, 45, 45 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 2 )
region = Rect2( 0, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 2 )
region = Rect2( 45, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 2 )
region = Rect2( 90, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 2 )
region = Rect2( 135, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 2 )
region = Rect2( 180, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 2 )
region = Rect2( 225, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 2 )
region = Rect2( 270, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 2 )
region = Rect2( 315, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 2 )
region = Rect2( 360, 45, 45, 45 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 9 )
region = Rect2( 0, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 9 )
region = Rect2( 34, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 9 )
region = Rect2( 68, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 9 )
region = Rect2( 102, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 9 )
region = Rect2( 136, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 9 )
region = Rect2( 170, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 9 )
region = Rect2( 204, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 9 )
region = Rect2( 238, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 9 )
region = Rect2( 272, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 9 )
region = Rect2( 306, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 9 )
region = Rect2( 340, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 9 )
region = Rect2( 374, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 9 )
region = Rect2( 408, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 9 )
region = Rect2( 442, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 9 )
region = Rect2( 476, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 9 )
region = Rect2( 510, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 9 )
region = Rect2( 544, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 9 )
region = Rect2( 578, 92, 34, 46 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 48, 55 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 9 )
region = Rect2( 0, 138, 34, 46 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 48, 55 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 9 )
region = Rect2( 0, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 9 )
region = Rect2( 34, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 9 )
region = Rect2( 68, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 9 )
region = Rect2( 102, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 9 )
region = Rect2( 136, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 9 )
region = Rect2( 170, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 9 )
region = Rect2( 204, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 9 )
region = Rect2( 238, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 9 )
region = Rect2( 272, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 9 )
region = Rect2( 306, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 9 )
region = Rect2( 340, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 9 )
region = Rect2( 374, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 9 )
region = Rect2( 408, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 9 )
region = Rect2( 442, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 9 )
region = Rect2( 476, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 9 )
region = Rect2( 510, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 9 )
region = Rect2( 544, 46, 34, 46 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 9 )
region = Rect2( 578, 46, 34, 46 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ) ],
"loop": true,
"name": "growing_dome4",
"speed": 10.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "empty_dome4",
"speed": 5.0
}, {
"frames": [ SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ) ],
"loop": true,
"name": "overcharged_dome4",
"speed": 5.0
}, {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": true,
"name": "fruit_dome4",
"speed": 10.0
}, {
"frames": [ SubResource( 78 ) ],
"loop": true,
"name": "empty_dome2",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "empty_dome1",
"speed": 5.0
}, {
"frames": [ SubResource( 51 ) ],
"loop": true,
"name": "fruit_dome3",
"speed": 5.0
}, {
"frames": [ SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ) ],
"loop": true,
"name": "growing_dome1",
"speed": 10.0
}, {
"frames": [ SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ) ],
"loop": true,
"name": "overcharged_dome1",
"speed": 10.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ) ],
"loop": true,
"name": "growing_dome2",
"speed": 10.0
}, {
"frames": [ SubResource( 47 ) ],
"loop": true,
"name": "growing_dome3",
"speed": 10.0
}, {
"frames": [ SubResource( 77 ) ],
"loop": true,
"name": "fruit_dome2",
"speed": 5.0
}, {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": false,
"name": "fruit_dome1",
"speed": 10.0
}, {
"frames": [ SubResource( 49 ) ],
"loop": true,
"name": "empty_dome3",
"speed": 5.0
}, {
"frames": [ SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ) ],
"loop": true,
"name": "overcharged_dome2",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 12, 14 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 12, 0, 12, 14 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 12, 14 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 36, 0, 12, 14 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 12, 14 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 60, 0, 12, 14 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 12, 14 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 17, 14 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 10 )
region = Rect2( 17, 0, 17, 14 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 10 )
region = Rect2( 34, 0, 17, 14 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 10 )
region = Rect2( 51, 0, 17, 14 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 10 )
region = Rect2( 68, 0, 17, 14 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 10 )
region = Rect2( 85, 0, 17, 14 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 10 )
region = Rect2( 102, 0, 17, 14 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "shine_dome1",
"speed": 10.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "shine_dome2",
"speed": 10.0
} ]

[node name="Orchard" type="Node2D" groups=["overchargable", "pauseL", "saveable"]]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -2, -14 )
frames = SubResource( 1 )
animation = "overcharged_dome4"
frame = 2
playing = true

[node name="Fruit" type="AnimatedSprite" parent="Sprite"]
position = Vector2( 4, -5 )
frames = SubResource( 28 )
animation = "shine_dome2"
frame = 5

[node name="Usable" parent="." instance=ExtResource( 4 )]
position = Vector2( -2, -8 )

[node name="Timer" type="Timer" parent="."]

[node name="FruitBlink" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 6 )
volume_db = 11.361
pitch_scale = 1.36
bus = "Dome"
randomVolume = 1.5
randomPitch = 0.11
maxAudibleDistance = 100.0
minAudibleDistance = 20.0

[node name="FruitBlinkDome2" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 22 )
volume_db = 2.622
pitch_scale = 1.12
bus = "Dome"
randomVolume = 1.5
randomPitch = 0.0
maxAudibleDistance = 100.0
minAudibleDistance = 20.0

[node name="FruitSpawnSound" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 8 )
pitch_scale = 1.4
bus = "Dome"
randomVolume = 1.0
randomPitch = 0.11

[node name="FruitSpawnSound2" parent="FruitSpawnSound" instance=ExtResource( 5 )]
stream = ExtResource( 8 )
pitch_scale = 1.47
bus = "Dome"
randomVolume = 1.0
randomPitch = 0.11

[node name="FruitSpawnDome2Sound" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 8 )
volume_db = 3.496
pitch_scale = 1.4
bus = "Dome"
randomVolume = 1.0
randomPitch = 0.11
maxAudibleDistance = 180.0
minAudibleDistance = 30.0

[node name="FruitSpawnSound2" parent="FruitSpawnDome2Sound" instance=ExtResource( 5 )]
stream = ExtResource( 16 )
volume_db = 10.487
pitch_scale = 1.02
bus = "Dome"
randomVolume = 1.0
randomPitch = 0.11

[node name="Center" type="Position2D" parent="."]
position = Vector2( 0, -16 )

[node name="OrchardActive" parent="Center" instance=ExtResource( 5 )]
stream = ExtResource( 7 )
volume_db = -7.742
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 60.0
minAudibleDistance = 30.0
loop = true

[node name="OrchardDome2Active" parent="Center" instance=ExtResource( 5 )]
volume_db = -2.061
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 60.0
minAudibleDistance = 30.0
streams = [ ExtResource( 17 ), ExtResource( 19 ), ExtResource( 18 ) ]
loop = true

[node name="TreeTimer" type="Timer" parent="."]

[node name="OverchargeSound" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 15 )
volume_db = -11.799
pitch_scale = 0.83
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 240.0
minAudibleDistance = 60.0

[node name="NoOverchargeSound" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 12 )
volume_db = 5.244
pitch_scale = 2.0
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0

[node name="RootingSound" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 13 )
volume_db = 3.0
pitch_scale = 1.58
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0

[node name="RootingSound2" parent="RootingSound" instance=ExtResource( 5 )]
stream = ExtResource( 20 )
volume_db = -0.496
pitch_scale = 0.96
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0

[node name="ShieldSound" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 14 )
volume_db = 3.874
pitch_scale = 1.08
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0

[node name="ShieldEndSound" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 21 )
volume_db = 1.252
pitch_scale = 0.88
bus = "Dome"
randomVolume = 0.0
randomPitch = 0.0

[node name="Tween" type="Tween" parent="."]

[connection signal="frame_changed" from="Sprite/Fruit" to="." method="_on_Fruit_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TreeTimer" to="." method="_on_TreeTimer_timeout"]
